fixed alignment of hambugernav icon and nav links on small devices

--- a/src/components/collection/collection.css
+++ b/src/components/collection/collection.css
@@ -107,18 +107,27 @@ button.add-button:hover {
 	background-color: azure;
 }
 
-.collection-results {
+.collection-results, .search {
 	margin-top: 100px;
 }
 
-.collection-results h1 {
-  color: rgb(46, 148, 155);
+.collection-results h2, .search h2 {
+  color:white;
 	font-weight: 400;
-  text-align: start;
-  padding: 0 2%;
-  margin-top: 10px;
+	text-align: start;
+	position: fixed;
+  padding: 0;
+	margin-top: -30px;
+	z-index: 1;
 }
 
+.search h2 {
+	margin-top: -80px;
+}
+
+input[type="search"] {
+	margin-top: 150px;
+}
 
 /* Extra small devices (phones, 289 and up) */
 @media only screen and (min-width: 289) {
@@ -153,12 +162,16 @@ button.add-button:hover {
 	}
 }
 
-/* Small devices (phones, 600px and down) */
+/* Small devices (phones, 660px and down) */
 @media only screen and (max-width: 660px) {
 
-	.collection-results h1 {
-		padding-top: 60px;
-		margin-right: 15px;
+	.collection-results h2, .search h2 {
+		margin: -30px 20px;
+		font-size: 25px;
+	}
+
+	.search h2 {
+		margin-top: -80px;
 	}
 
 	.collection-list {
