--- a/src/components/hamburger-nav/nav.css
+++ b/src/components/hamburger-nav/nav.css
@@ -29,6 +29,7 @@ nav .navNarrow i {
   color: rgb(46, 148, 155);
   margin-right: 100px;
   margin-top: 200px;
+  background-color: #111;
 }
 
 nav .navNarrow .narrowLinks {
@@ -128,6 +129,22 @@ nav .navNarrow .narrowLinks a {
     margin: 5px 0 0 10px;
   }
 
+  nav .navNarrow {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+
+
+  .bar1, .bar2, .bar3 {
+    margin: 8.5px 0;
+  }
+
+  .change .bar1, .change .bar3 {
+    position: absolute;
+    right: 0;
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -156,25 +173,6 @@ nav .navNarrow .narrowLinks a {
 }
 
 @media only screen and (max-width: 600px) {
-/* 
-  nav .navWide .wideDiv  {
-    margin-left: 0;
-    position: relative;
-    right: 20px;
-  }
-
-  nav .navWide .wideDiv a {
-    margin: 5px 5px 0 15px;
-  }
-
-  nav .navWide {
-    margin-top: 0;
-    margin-right: 40px;
-    padding: 0;
-    font-size: 22px;
-  }
-
-*/
 
   nav .navNarrow i {
     margin-right: 60px;
@@ -182,18 +180,18 @@ nav .navNarrow .narrowLinks a {
   }
 
   nav .narrowLinks {
-    margin-top: -7px;
-    margin-right: -25px;
-    padding: 20px;
+    margin-top: 35px;
+    margin-right: -100px;
+    z-index: 2;
   }
 
   nav .navNarrow .narrowLinks a {
-    width: 100%;
-    margin-right: 45px;
+    width: 80%;
+    margin-right: 55px;
     font-size: 28px;
     margin-top: -37px;
     padding: 5%; 
-    background-color: rgb(32, 46, 68)
+    background-color: #111;
   } 
 
 }
